# cplus2

./: .gitignore  CMakeLists.txt  main.cpp  plate_ocr
